# chatroom-rust

./: .gitignore  Cargo.toml  README.md
chatroom-client/: package-lock.json  package.json
chatroom-client/src/: App.tsx  index.css
chatroom-client/src-tauri/: Cargo.toml  tauri.conf.json
chatroom-client/src-tauri/src/: clientboundpackethandler.rs  clientcommands.rs  clientstate.rs  connection.rs  consts.rs  errors.rs  lib.rs  packethelper.rs  utils.rs
chatroom-client/src/elements/: messagelist.tsx  textinput.tsx
chatroom-client/src/views/: chat.tsx  connect.tsx
server/: Cargo.toml
server/src/: consts.rs  errors.rs  heartbeat.rs  lib.rs  main.rs  server.rs  serverwrapper.rs
server/src/client/: clienthandler.rs  mod.rs
server/src/user/: mod.rs  shareduser.rs  user.rs
server/src/utils/: channel.rs
shared/: Cargo.toml
shared/src/: extensions.rs  lib.rs  packet.rs
