[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
uuid = "1.16.0"

[dependencies.bincode]
# using v1.3 because 2.0 introduces uneccesary complexity
version = "1.3"

[dependencies.tokio]
version = "1.45.0"
features = ["net", "io-util", "time"]
